Finished the template of Saphira reduction; fixed annoying bugs with configuration file uploading.

--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "Read a configuration file from a string file name. Please note that errors will be raised if the file name does not have a `.ifaspkl` file extension when reading and writing the files.\n",
     "\n",
-    "If it does not exist, a new configuration file will be made rather than the default of overwriting the previous configuration file. Of course, if a copy is desired, then change the ``alternate_name`` variable to a valid configuration file name."
+    "If it does not exist, a new configuration file will be made rather than the default of overwriting the previous configuration file. Of course, if a copy is desired, then change the ``alternate_name`` variable to a valid configuration file name. Lastly, it is assumed that a configuration file should not be overwritten; if there is conflict, the process stops. Set ``overwrite`` to change this behavior. "
    ]
   },
   {
@@ -53,8 +53,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "configuration_file_name = \"blew.ifaspkl\"\n",
-    "alternate_name = None"
+    "configuration_file_name = \"test.ifaspkl\"\n",
+    "alternate_name = None\n",
+    "overwrite = True"
    ]
   },
   {
@@ -64,7 +65,7 @@
    "outputs": [],
    "source": [
     "## Toto partem non mutant | Do not modify all ##\n",
-    "config_class = ifas.yankee.SmeargleConfig(configuration_file_name)"
+    "config_class = ifas.yankee.SmeargleConfig()"
    ]
   },
   {
@@ -82,57 +83,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Detector bias voltage pattern renaming: It is common to have many sets taken across some voltage variation. Defining the pattern (and assuming the pattern matches with the transitions of voltage) the files can be renamed to something more helpful."
+    "The detector name itself. This is how the data files are distinguished between the different detectors that are used. This can either be a string, or a dictionary with the key ``name`` and a corresponding value a string that is the name that should be prefixed to each of the data files (the preferred method). "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data_directory': None, 'voltage_pattern': None}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "config_class.BravoConfig.voltpat_rename_config"
+    "config_class.BravoConfig.detector_name = {'name':'TestArray'}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It does not serve well to use the entire array for analysis, the `start_chunk` number of frames from the beginning and the `end_chunk` number of frames from the end are combined in such a way to produce a single fits image, from the cube or other data structure, for analysis"
+    "Detector bias voltage pattern renaming: It is common to have many sets taken across some voltage variation. Defining the pattern (and assuming the pattern matches with the transitions of voltage) the files can be renamed to something more helpful."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'fits_file': None,\n",
-       " 'start_chunk': None,\n",
-       " 'end_chunk': None,\n",
-       " 'frame_exposure_time': None}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "config_class.BravoConfig.avg_endpts_config"
+    "config_class.BravoConfig.voltpat_rename_config = {'voltage_pattern':[2.5,4.5,6.5,8.5,9.5,10.5,11.5,11.5,10.5,9.5,8.5,6.5,4.5,2.5]}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It does not serve well to use the entire array for analysis, the `start_chunk` number of frames from the beginning and the `end_chunk` number of frames from the end are combined in such a way to produce a single fits image, from the cube or other data structure, for analysis. ``frame_exposure_time`` is the number of seconds each frame is taken for."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_class.BravoConfig.avg_endpts_config = {'start_chunk':32, 'end_chunk':32, 'frame_exposure_time':10}"
    ]
   },
   {
@@ -156,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +157,7 @@
        "{'run': False}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +184,7 @@
        "{'run': False, 'x_range': None, 'y_range': None}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +211,7 @@
        "{'run': False, 'minimum_value': None}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +238,7 @@
        "{'run': False, 'maximum_value': None}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +265,7 @@
        "{'run': False, 'top_count': None, 'bottom_count': None}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +292,7 @@
        "{'run': False, 'kept_range': None}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +319,7 @@
        "{'run': False, 'pixel_list': None}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +346,7 @@
        "{'run': False, 'x_ranges': None, 'y_ranges': None}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +373,7 @@
        "{'run': False, 'column_list': None}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +400,7 @@
        "{'run': False, 'row_list': None}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +427,7 @@
        "{'run': False}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +454,7 @@
        "{'run': False}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,21 +554,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TerminalError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTerminalError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-c9c81974701e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mraise\u001b[0m \u001b[0mifas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmeta\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTerminalError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTerminalError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -604,14 +584,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It has finished. A configuration file has been written to blew.ifaspkl\n"
+      "It has finished. A configuration file has been written to test.ifaspkl\n"
      ]
     },
     {
@@ -619,7 +599,9 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\Tripp\\.conda\\envs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:7: InputWarning: The alternate name is not valid, defaulting to the normal configuration file name.\n",
-      "  import sys\n"
+      "  import sys\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py:167: OverwriteWarning: There exists a file with the provided name. Overwrite is true; the previous file will be replaced as provided.\n",
+      "  smeargle_warning(OverwriteWarning,(\"There exists a file with the provided name. \"\n"
      ]
     }
    ],
@@ -628,25 +610,18 @@
     "final_name = 'Null'\n",
     "try:\n",
     "    final_name = alternate_name\n",
-    "    config_class.write_to_file(alternate_name)\n",
+    "    config_class.write_to_file(alternate_name, overwrite=overwrite)\n",
     "except Exception:\n",
     "    ifas.meta.smeargle_warning(ifas.meta.InputWarning,(\"The alternate name is not valid, \"\n",
     "                                                       \"defaulting to the normal configuration file name.\"))\n",
     "    \n",
     "    final_name = configuration_file_name\n",
-    "    config_class.write_to_file(configuration_file_name)\n",
+    "    config_class.write_to_file(configuration_file_name, overwrite=overwrite)\n",
     "finally:\n",
     "    print(\"It has finished. A configuration file has been written to {file_name}\".format(\n",
     "        file_name=final_name))\n",
     "        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
