--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -632,19 +632,14 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "ifa.bravo.end_ave.average_endpoints(original_names[1],16,16,5,alternate_name='./Data/HelloWorld')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "config = ifa.yankee.SmeargleConfig()\n",
-    "bravo_config = ifa.yankee.BravoConfig()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -660,63 +655,206 @@
      ]
     }
    ],
-   "source": [
-    "bravo_config.write_to_file('bravoconfig',overwrite=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "good_config = ifa.yankee.BravoConfig('bravoconfig.ifaspkl')"
+    "config_file = ifa.yankee.SmeargleConfig(config_file_name='trial.ifaspkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'brfig.ifaspkl'",
+     "ename": "TypeError",
+     "evalue": "voltage_pattern_rename_fits() got multiple values for argument 'data_directory'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-080558c29665>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbad_config\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mifa\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0myankee\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSmeargleConfig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'brfig.ifaspkl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, config_file_name)\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m         \u001b[1;31m# Test if the configuration file name has been provided.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mconfig_file_name\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m             \u001b[1;31m# Assume it is a string and attempt to parse it.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py\u001b[0m in \u001b[0;36mread_from_file\u001b[1;34m(self, file_name)\u001b[0m\n\u001b[0;32m    109\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    110\u001b[0m         \u001b[0mReturns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 111\u001b[1;33m         \u001b[1;33m-\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    112\u001b[0m         \u001b[0mnothing\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    113\u001b[0m         \"\"\"\n",
-      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py\u001b[0m in \u001b[0;36mread_config_file\u001b[1;34m(file_name)\u001b[0m\n\u001b[0;32m    228\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    229\u001b[0m     \u001b[0mReturns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 230\u001b[1;33m     \u001b[1;33m-\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    231\u001b[0m     \u001b[0mconfig_class\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mSmeargleConfig\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    232\u001b[0m         \u001b[0mThe\u001b[0m \u001b[0mconfiguration\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mstored\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'brfig.ifaspkl'"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-20-1a118d79d1a1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mifa\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbravo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbravo_execution_saphria\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'./Data'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mconfig_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\bravo\\bravo_main.py\u001b[0m in \u001b[0;36mbravo_execution_saphria\u001b[1;34m(data_directory, configuration_class)\u001b[0m\n\u001b[0;32m     59\u001b[0m     \u001b[1;31m# Getting the voltage renames\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m     voltage_names = bravo.rename.voltage_pattern_rename_fits(data_directory,\n\u001b[1;32m---> 61\u001b[1;33m                                                          **provided_config.voltpat_rename_config)\n\u001b[0m\u001b[0;32m     62\u001b[0m     \u001b[0mn_files\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvoltage_names\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: voltage_pattern_rename_fits() got multiple values for argument 'data_directory'"
      ]
     }
    ],
    "source": [
-    "bad_config = ifa.yankee.SmeargleConfig('brfig.ifaspkl')"
+    "ifa.bravo.bravo_execution_saphria('./Data',config_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportingError",
-     "evalue": "The read configuration file configuration class type is not the same as the calling class type. See:   File: < <class 'IfA_Smeargle.yankee.yankee_main.SmeargleConfig'> >   Init: < <class 'IfA_Smeargle.yankee.configuration_classes.BravoConfig_file.BravoConfig'> > ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportingError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-501d9df7acfa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma_bad_config\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mifa\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0myankee\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mBravoConfig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'test.ifaspkl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, config_file_name)\u001b[0m\n\u001b[0;32m     46\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mconfig_file_name\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m             \u001b[1;31m# Assume it is a string and attempt to parse it.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m             \u001b[0mself\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_from_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconfig_file_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m             \u001b[1;31m# Assume defaults.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py\u001b[0m in \u001b[0;36mread_from_file\u001b[1;34m(self, file_name)\u001b[0m\n\u001b[0;32m    118\u001b[0m                                      \"File: < {file_type} >   Init: < {init_type} > \".format(\n\u001b[0;32m    119\u001b[0m                                          \u001b[0mfile_type\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mread_config_class\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 120\u001b[1;33m                                          init_type=type(self)))\n\u001b[0m\u001b[0;32m    121\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    122\u001b[0m                 \u001b[1;31m# Seems to be all good.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportingError\u001b[0m: The read configuration file configuration class type is not the same as the calling class type. See:   File: < <class 'IfA_Smeargle.yankee.yankee_main.SmeargleConfig'> >   Init: < <class 'IfA_Smeargle.yankee.configuration_classes.BravoConfig_file.BravoConfig'> > "
+     "data": {
+      "text/plain": [
+       "{'data_directory': None, 'voltage_pattern': None}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py:57: ImportingWarning: The specified configuration file given by the file name cannot be found. A default configuration class is being provided. \n",
+      "  smeargle_warning(ImportingWarning,(\"The specified configuration file given by \"\n"
      ]
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newconfig = ifa.yankee.SmeargleConfig('test.ifaspkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'TestArray'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newconfig.BravoConfig.detector_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newconfig.BravoConfig.voltpat_rename_config['copy_data'] = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'voltage_pattern': [2.5,\n",
+       "  4.5,\n",
+       "  6.5,\n",
+       "  8.5,\n",
+       "  9.5,\n",
+       "  10.5,\n",
+       "  11.5,\n",
+       "  11.5,\n",
+       "  10.5,\n",
+       "  9.5,\n",
+       "  8.5,\n",
+       "  6.5,\n",
+       "  4.5,\n",
+       "  2.5],\n",
+       " 'copy_data': False}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newconfig.BravoConfig.voltpat_rename_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: VerifyWarning: Keyword name 'previous_size' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Keyword name 'start_chunk' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Keyword name 'end_chunk' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\meta\\fits_and_arrays.py:100: OverwriteWarning: There exists a file with the provided name. Overwrite is true; the previous file will be replaced as provided.\n",
+      "  smeargle_warning(OverwriteWarning,(\"There exists a file with the provided name. \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "ifa.bravo.bravo_execution_saphria('./Data',newconfig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'start_chunk': 32, 'end_chunk': 32, 'frame_exposure_time': 10}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newconfig.BravoConfig.avg_endpts_config"
+   ]
   },
   {
    "cell_type": "code",
