Added configuration factory class; fixed a bug in the averaging method.

--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -24,6 +24,7 @@
    "source": [
     "## Toto partem non mutant | Do not modify all ##\n",
     "import astropy as ap\n",
+    "import copy\n",
     "import numpy as np\n",
     "import os\n",
     "import scipy as sp\n",
@@ -62,10 +63,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\yankee_main.py:53: ImportingWarning: The configuration file could not be properly read. Consider using the factory function. A blank configuration class has been provided instead.\n",
+      "  smeargle_warning(ImportingWarning,(\"The configuration file could not be \"\n"
+     ]
+    }
+   ],
    "source": [
     "## Toto partem non mutant | Do not modify all ##\n",
-    "config_class = ifas.yankee.SmeargleConfig()"
+    "config_class = ifas.yankee.SmeargleConfig(configuration_file_name)"
    ]
   },
   {
@@ -115,7 +125,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It does not serve well to use the entire array for analysis, the `start_chunk` number of frames from the beginning and the `end_chunk` number of frames from the end are combined in such a way to produce a single fits image, from the cube or other data structure, for analysis. ``frame_exposure_time`` is the number of seconds each frame is taken for."
+    "It does not serve well to use the entire array for analysis, the `start_chunk` number of frames from the beginning and the `end_chunk` number of frames from the end are combined in such a way to produce a single fits image, from the cube or other data structure, for analysis. ``frame_exposure_time`` is the number of seconds each frame is taken for.\n",
+    "\n",
+    "The same parameters are passed to the kilosecond version (the time conversion is handled natively, mutating the frame_exposure_time component from per second to  per kilosecond)."
    ]
   },
   {
@@ -124,7 +136,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_class.BravoConfig.avg_endpts_config = {'start_chunk':32, 'end_chunk':32, 'frame_exposure_time':5}"
+    "config_class.BravoConfig.avg_endpts_persec_config = {'start_chunk':32, 'end_chunk':32, 'frame_exposure_time':5}\n",
+    "\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "config_class.BravoConfig.avg_endpts_perksec_config = copy.deepcopy(config_class.BravoConfig.avg_endpts_persec_config)"
    ]
   },
   {
@@ -518,7 +533,7 @@
     "mpl_heatmap_parameters = {}\n",
     "mpl_colorbar_parameters = {}\n",
     "\n",
-    "## Post; nihil se mutare | Do not change below ##\n",
+    "## Post; nihil se mutare | Do not modify below ##\n",
     "config_class.OscarConfig.heatmap_config = {**heatmap_configuration, \n",
     "                                           'heatmap_plot_parameters':mpl_heatmap_parameters, \n",
     "                                           'colorbar_plot_paramters':mpl_colorbar_parameters}"
@@ -540,7 +555,7 @@
     "histogram_configuration = {}\n",
     "mpl_histogram_parameters = {}\n",
     "\n",
-    "## Post; nihil se mutare | Do not change below ##\n",
+    "## Post; nihil se mutare | Do not modify below ##\n",
     "config_class.OscarConfig.histogram_config = {**histogram_configuration,\n",
     "                                            'histogram_plot_paramters':mpl_histogram_parameters}"
    ]
