--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "newconfig.BravoConfig.voltpat_rename_config['archive_data'] = True"
+    "newconfig.BravoConfig.voltpat_rename_config['archive_data'] = False"
    ]
   },
   {
@@ -818,7 +818,7 @@
       "< Configuration Class --- BravoConfig > \n",
       "╓ BravoConfig Parameters:\n",
       "╟  detector_name ⇀ {'name': 'TestArray'}\n",
-      "╟  voltpat_rename_config ⇀ {'voltage_pattern': [2.5, 4.5, 6.5, 8.5, 9.5, 10.5, 11.5, 11.5, 10.5, 9.5, 8.5, 6.5, 4.5, 2.5], 'archive_data': True, 'begin_garbage': 1}\n",
+      "╟  voltpat_rename_config ⇀ {'voltage_pattern': [2.5, 4.5, 6.5, 8.5, 9.5, 10.5, 11.5, 11.5, 10.5, 9.5, 8.5, 6.5, 4.5, 2.5], 'archive_data': False, 'begin_garbage': 1}\n",
       "╟  avg_endpts_config ⇀ {'start_chunk': 32, 'end_chunk': 32, 'frame_exposure_time': 5}\n",
       "╙------------------------------------------\n",
       "</ Configuration Class --- BravoConfig >\n",
@@ -865,23 +865,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\bravo\\archiving.py:40: TimeWarning: Archiving and copying particularly a lot of large fits files may take a very long time. It is still suggested, but do outside Python. Disable via < copy_data=False >.\n",
-      "  smeargle_warning(TimeWarning,(\"Archiving and copying particularly a lot of large fits \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pure archive of data is stored in  < ./Data/BravoArchive__20190710_132236.tar.bz2 >\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ifa.bravo.bravo_execution_saphria('./Data',newconfig)"
    ]
@@ -1024,21 +1008,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'─'"
+       "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "issubclass(ifa.yankee.BaseConfig,ifa.yankee.BaseConfig)"
+   ]
   },
   {
    "cell_type": "code",
