--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -68,7 +68,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\yankee_main.py:53: ImportingWarning: The configuration file could not be properly read. Consider using the factory function. A blank configuration class has been provided instead.\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\yankee_main.py:55: ImportingWarning: The configuration file could not be properly read. Consider using the factory function. A blank configuration class has been provided instead.\n",
       "  smeargle_warning(ImportingWarning,(\"The configuration file could not be \"\n"
      ]
     }
@@ -158,7 +158,7 @@
    "metadata": {},
    "source": [
     "ECHO-010 Fixing Invalids:\n",
-    "A simple filter that just filters out computationally bad or prohibitive values (e.g. NaN, np.Inf)from the given data array."
+    "A simple filter that just filters out computationally bad or prohibitive values (e.g. NaN, np.Inf) from the given data array."
    ]
   },
   {
@@ -192,20 +192,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'run': False, 'x_range': None, 'y_range': None}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "config_class.EchoConfig.echo120_config"
+    "config_class.EchoConfig.echo120_config = {'run': True, 'x_range': [100,200], 'y_range': [150,300]}"
    ]
   },
   {
@@ -614,9 +603,7 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\Tripp\\.conda\\envs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:7: InputWarning: The alternate name is not valid, defaulting to the normal configuration file name.\n",
-      "  import sys\n",
-      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\configuration_classes\\BaseConfig_file.py:218: OverwriteWarning: There exists a file with the provided name. Overwrite is true; the previous file will be replaced as provided.\n",
-      "  smeargle_warning(OverwriteWarning,(\"There exists a file with the provided name. \"\n"
+      "  import sys\n"
      ]
     }
    ],
