--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -100,9 +100,19 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'TestArray'}\n"
+     ]
+    }
+   ],
    "source": [
-    "config_class.BravoConfig.detector_name = {'name':'TestArray'}"
+    "config_class.BravoConfig.detector_name = {'name':'TestArray'}\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.BravoConfig.detector_name)"
    ]
   },
   {
@@ -116,9 +126,19 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'voltage_pattern': [2.5, 4.5, 6.5, 8.5, 9.5, 10.5, 11.5, 11.5, 10.5, 9.5, 8.5, 6.5, 4.5, 2.5]}\n"
+     ]
+    }
+   ],
    "source": [
-    "config_class.BravoConfig.voltpat_rename_config = {'voltage_pattern':[2.5,4.5,6.5,8.5,9.5,10.5,11.5,11.5,10.5,9.5,8.5,6.5,4.5,2.5]}"
+    "config_class.BravoConfig.voltpat_rename_config = {'voltage_pattern':[2.5,4.5,6.5,8.5,9.5,10.5,11.5,11.5,10.5,9.5,8.5,6.5,4.5,2.5]}\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.BravoConfig.voltpat_rename_config)"
    ]
   },
   {
@@ -134,12 +154,23 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'start_chunk': 32, 'end_chunk': 32, 'frame_exposure_time': 5}\n",
+      "{'start_chunk': 32, 'end_chunk': 32, 'frame_exposure_time': 5}\n"
+     ]
+    }
+   ],
    "source": [
     "config_class.BravoConfig.avg_endpts_persec_config = {'start_chunk':32, 'end_chunk':32, 'frame_exposure_time':5}\n",
     "\n",
     "## Ne mutatus sum ego | Do not modify after ##\n",
-    "config_class.BravoConfig.avg_endpts_perksec_config = copy.deepcopy(config_class.BravoConfig.avg_endpts_persec_config)"
+    "config_class.BravoConfig.avg_endpts_perksec_config = copy.deepcopy(config_class.BravoConfig.avg_endpts_persec_config)\n",
+    "print(config_class.BravoConfig.avg_endpts_persec_config)\n",
+    "print(config_class.BravoConfig.avg_endpts_perksec_config)"
    ]
   },
   {
@@ -167,18 +198,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'run': False}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'run': False}\n"
+     ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo010_config"
+    "config_class.EchoConfig.echo010_config\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.EchoConfig.echo010_config)"
    ]
   },
   {
@@ -192,9 +222,19 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'run': True, 'x_range': [100, 200], 'y_range': [150, 300]}\n"
+     ]
+    }
+   ],
    "source": [
-    "config_class.EchoConfig.echo120_config = {'run': True, 'x_range': [100,200], 'y_range': [150,300]}"
+    "config_class.EchoConfig.echo120_config = {'run': True, 'x_range': [100,200], 'y_range': [150,300]}\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.EchoConfig.echo120_config)"
    ]
   },
   {
@@ -210,18 +250,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'run': False, 'minimum_value': None}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'run': False, 'minimum_value': None}\n"
+     ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo270_config"
+    "config_class.EchoConfig.echo270_config\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.EchoConfig.echo270_config)"
    ]
   },
   {
@@ -237,18 +276,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'run': False, 'maximum_value': None}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'run': False, 'maximum_value': None}\n"
+     ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo271_config"
+    "config_class.EchoConfig.echo271_config\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.EchoConfig.echo271_config)"
    ]
   },
   {
@@ -264,18 +302,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'run': False, 'top_count': None, 'bottom_count': None}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'run': False, 'top_count': None, 'bottom_count': None}\n"
+     ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo275_config"
+    "config_class.EchoConfig.echo275_config\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.EchoConfig.echo275_config)"
    ]
   },
   {
@@ -291,18 +328,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'run': False, 'kept_range': None}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'run': False, 'kept_range': None}\n"
+     ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo276_config"
+    "config_class.EchoConfig.echo276_config\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.EchoConfig.echo276_config)"
    ]
   },
   {
@@ -318,18 +354,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'run': False, 'pixel_list': None}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'run': False, 'pixel_list': None}\n"
+     ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo380_config"
+    "config_class.EchoConfig.echo380_config\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.EchoConfig.echo380_config)"
    ]
   },
   {
@@ -345,18 +380,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'run': False, 'x_ranges': None, 'y_ranges': None}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'run': False, 'x_ranges': None, 'y_ranges': None}\n"
+     ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo381_config"
+    "config_class.EchoConfig.echo381_config\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.EchoConfig.echo381_config)"
    ]
   },
   {
@@ -372,18 +406,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'run': False, 'column_list': None}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'run': False, 'column_list': None}\n"
+     ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo382_config"
+    "config_class.EchoConfig.echo382_config\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.EchoConfig.echo382_config)"
    ]
   },
   {
@@ -399,18 +432,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'run': False, 'row_list': None}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'run': False, 'row_list': None}\n"
+     ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo383_config"
+    "config_class.EchoConfig.echo383_config\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.EchoConfig.echo383_config)"
    ]
   },
   {
@@ -426,18 +458,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'run': False}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'run': False}\n"
+     ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo398_config"
+    "config_class.EchoConfig.echo398_config\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.EchoConfig.echo398_config)"
    ]
   },
   {
@@ -453,18 +484,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'run': False}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'run': False}\n"
+     ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo399_config"
+    "config_class.EchoConfig.echo399_config\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.EchoConfig.echo399_config)"
    ]
   },
   {
@@ -516,16 +546,27 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'plot': False, 'data_array': None, 'heatmap_plot_parameters': {}, 'colorbar_plot_paramters': {}}\n"
+     ]
+    }
+   ],
    "source": [
     "heatmap_configuration = {}\n",
     "mpl_heatmap_parameters = {}\n",
     "mpl_colorbar_parameters = {}\n",
     "\n",
     "## Post; nihil se mutare | Do not modify below ##\n",
-    "config_class.OscarConfig.heatmap_config = {**heatmap_configuration, \n",
-    "                                           'heatmap_plot_parameters':mpl_heatmap_parameters, \n",
-    "                                           'colorbar_plot_paramters':mpl_colorbar_parameters}"
+    "config_class.OscarConfig.general_heatmap_config = {**config_class.OscarConfig.general_heatmap_config,\n",
+    "                                                   **heatmap_configuration, \n",
+    "                                                   'heatmap_plot_parameters':mpl_heatmap_parameters, \n",
+    "                                                   'colorbar_plot_paramters':mpl_colorbar_parameters}\n",
+    "\n",
+    "print(config_class.OscarConfig.general_heatmap_config)"
    ]
   },
   {
@@ -539,14 +580,24 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'plot': False, 'data_array': None, 'histogram_plot_paramters': {}}\n"
+     ]
+    }
+   ],
    "source": [
     "histogram_configuration = {}\n",
     "mpl_histogram_parameters = {}\n",
     "\n",
     "## Post; nihil se mutare | Do not modify below ##\n",
-    "config_class.OscarConfig.histogram_config = {**histogram_configuration,\n",
-    "                                            'histogram_plot_paramters':mpl_histogram_parameters}"
+    "config_class.OscarConfig.general_histogram_config = {**config_class.OscarConfig.general_histogram_config,\n",
+    "                                                     **histogram_configuration,\n",
+    "                                                     'histogram_plot_paramters':mpl_histogram_parameters}\n",
+    "print(config_class.OscarConfig.general_histogram_config)"
    ]
   },
   {
@@ -587,8 +638,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters to be read out to file. Printing out the entire configuration class for viewing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "< Configuration Class --- SmeargleConfig > \n",
+      "╓ SmeargleConfig Parameters:\n",
+      "╟  BravoConfig ↴ \n",
+      "< Configuration Class --- BravoConfig > \n",
+      "╓ BravoConfig Parameters:\n",
+      "╟  detector_name ⇀ {'name': 'TestArray'}\n",
+      "╟  voltpat_rename_config ⇀ {'voltage_pattern': [2.5, 4.5, 6.5, 8.5, 9.5, 10.5, 11.5, 11.5, 10.5, 9.5, 8.5, 6.5, 4.5, 2.5]}\n",
+      "╟  avg_endpts_persec_config ⇀ {'start_chunk': 32, 'end_chunk': 32, 'frame_exposure_time': 5}\n",
+      "╟  avg_endpts_perksec_config ⇀ {'start_chunk': 32, 'end_chunk': 32, 'frame_exposure_time': 5}\n",
+      "╙------------------------------------------\n",
+      "</ Configuration Class --- BravoConfig >\n",
+      "╟  EchoConfig ↴ \n",
+      "< Configuration Class --- EchoConfig > \n",
+      "╓ EchoConfig Parameters:\n",
+      "╟  echo010_config ⇀ {'run': False}\n",
+      "╟  echo120_config ⇀ {'run': True, 'x_range': [100, 200], 'y_range': [150, 300]}\n",
+      "╟  echo270_config ⇀ {'run': False, 'minimum_value': None}\n",
+      "╟  echo271_config ⇀ {'run': False, 'maximum_value': None}\n",
+      "╟  echo275_config ⇀ {'run': False, 'top_count': None, 'bottom_count': None}\n",
+      "╟  echo276_config ⇀ {'run': False, 'kept_range': None}\n",
+      "╟  echo380_config ⇀ {'run': False, 'pixel_list': None}\n",
+      "╟  echo381_config ⇀ {'run': False, 'x_ranges': None, 'y_ranges': None}\n",
+      "╟  echo382_config ⇀ {'run': False, 'column_list': None}\n",
+      "╟  echo383_config ⇀ {'run': False, 'row_list': None}\n",
+      "╟  echo398_config ⇀ {'run': False}\n",
+      "╟  echo399_config ⇀ {'run': False}\n",
+      "╙------------------------------------------\n",
+      "</ Configuration Class --- EchoConfig >\n",
+      "╟  OscarConfig ↴ \n",
+      "< Configuration Class --- OscarConfig > \n",
+      "╓ OscarConfig Parameters:\n",
+      "╟  general_heatmap_config ⇀ {'plot': False, 'data_array': None, 'heatmap_plot_parameters': {}, 'colorbar_plot_paramters': {}}\n",
+      "╟  general_histogram_config ⇀ {'plot': False, 'data_array': None, 'histogram_plot_paramters': {}}\n",
+      "╟  heathist_config ⇀ {'plot': False, 'data_array': None}\n",
+      "╙------------------------------------------\n",
+      "</ Configuration Class --- OscarConfig >\n",
+      "╟  YankeeConfig ↴ \n",
+      "< Configuration Class --- YankeeConfig > \n",
+      "╓ YankeeConfig Parameters:\n",
+      "╙------------------------------------------\n",
+      "</ Configuration Class --- YankeeConfig >\n",
+      "╙------------------------------------------\n",
+      "</ Configuration Class --- SmeargleConfig >\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(config_class)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, actually writing the class to an ``.ifaspkl`` file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
